# FIM

./: .clang-format  .gitignore  CMakeLists.txt  TODO
include/: actions.h  buffer.h  command.h  commands.h  cursor.h  files.h  helpers.h  input.h  linebuffer.h  motion.h  render.h  search.h  state.h  utf8.h
src/: actions.c  buffer.c  command.c  commandHandler.c  commands.c  cursor.c  files.c  helpers.c  input.c  linebuffer.c  main.c  motion.c  render.c  search.c  state.c  utf8.c
